Enable screen indexes from 1 (instead of 0)

--- a/config
+++ b/config
@@ -3,6 +3,9 @@ unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
 
+# pane index to start at 1
+set -g base-index 1
+setw -g pane-base-index 1
 
 # split panes using | and -
 bind | split-window -h
