--- a/config
+++ b/config
@@ -22,6 +22,16 @@ bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
 
+# pane resize
+bind-key j resize-pane -D 5
+bind-key k resize-pane -U 5
+bind-key h resize-pane -L 5
+bind-key l resize-pane -R 5
+
+bind-key -n M-j resize-pane -D
+bind-key -n M-k resize-pane -U
+bind-key -n M-h resize-pane -L
+bind-key -n M-l resize-pane -R
 
 # Enable mouse mode (tmux 2.1 and above)
 #set -g mouse on
