Revert "Reenable mouse support by default"
This reverts commit f74226dad659b94da7485ffb99a707397c831a91.

--- a/config
+++ b/config
@@ -34,7 +34,7 @@ bind-key -n M-h resize-pane -L
 bind-key -n M-l resize-pane -R
 
 # Enable mouse mode (tmux 2.1 and above)
-set -g mouse on
+#set -g mouse on
 
 ######################
 ### DESIGN CHANGES ###
